# RoeAIAssignment

./: README.md  README.txt  docker-compose.yaml
backend/: Dockerfile  db.sqlite3  pyproject.toml
backend/backend/: settings.py  urls.py
backend/videoapp/: models.py  urls.py  views.py
backend/videoapp/migrations/: 0001_initial.py
frontend/: Dockerfile
frontend/src/app/: layout.tsx  page.tsx
